Archive2/30/0df3c31d7f3fd7/output
main.cpp:27:11: error: reference initialization of type 'const int &' with initializer of type 'call_operator' is ambiguous
    (void)static_cast<const int&>(call_operator());
          ^                       ~~~~~~~~~~~~~~~
main.cpp:5:5: note: candidate function
    operator int() {
    ^
main.cpp:11:5: note: candidate function
    operator const int&() const {
    ^
main.cpp:18:5: note: candidate function
    operator int&() const {
    ^
1 error generated.
